--- a/index.css
+++ b/index.css
@@ -117,6 +117,38 @@
     text-decoration: line-through;
 }
 
+.remove-container {
+    margin: 10px 0px;
+    text-align: right;
+}
+
+.remove-container button {
+    padding: 10px;
+    border: none;
+    background-color: transparent;
+    color: #404040;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.remove-container button:hover {
+   color: blue;
+}
+
+.not-found {
+    padding: 10px;
+    margin: 10px 0px;
+    background-color: red;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.not-found p {
+    color: #fff;
+    font-size: 16px;
+}
+
 .footer {
     width: 100%;
     height: 70px;
